[gd_scene load_steps=26 format=4 uid="uid://ba0xh0ml40xnw"]

[ext_resource type="Script" path="res://scenes/levels/Level01.gd" id="1_suqfq"]
[ext_resource type="Script" path="res://scenes/levels/InfiniteLoader.gd" id="2_0n3ly"]
[ext_resource type="PackedScene" uid="uid://cnqdqkqxnuaj5" path="res://actors/PlayerOne.tscn" id="2_2pjf8"]
[ext_resource type="TileSet" uid="uid://bnu3gr0iqb12l" path="res://scenes/levels/TileSet.tres" id="2_puh76"]
[ext_resource type="Script" path="res://scenes/levels/Camera.gd" id="2_r2sxb"]
[ext_resource type="Texture2D" uid="uid://cfc1sn3s62cnp" path="res://assets/image/scribble_dungeons.png" id="3_0syjs"]
[ext_resource type="PackedScene" uid="uid://dkxhav8456jex" path="res://actors/PlayerTwo.tscn" id="3_isf1q"]
[ext_resource type="Script" path="res://objects/Linky.gd" id="5_qumpj"]
[ext_resource type="PackedScene" uid="uid://dgswviy1f8rgo" path="res://scenes/levels/BlackCircle.tscn" id="7_dbkpd"]
[ext_resource type="PackedScene" uid="uid://b246bf3ydqiia" path="res://scenes/levels/YouFailed.tscn" id="8_axi6d"]
[ext_resource type="PackedScene" uid="uid://dsdq08fndt7ow" path="res://objects/KeyboardHint.tscn" id="9_880yl"]
[ext_resource type="Texture2D" uid="uid://b56sqk5a1y6mn" path="res://assets/image/keyboard/keyboard_z.png" id="10_s016p"]
[ext_resource type="Texture2D" uid="uid://dwgqayh0p674w" path="res://assets/image/keyboard/keyboard_arrow_up.png" id="10_savgc"]
[ext_resource type="Texture2D" uid="uid://bmq5feydv3v4k" path="res://assets/image/keyboard/keyboard_arrow_down.png" id="11_3nb7h"]
[ext_resource type="Texture2D" uid="uid://bebtjl64ecvip" path="res://assets/image/keyboard/keyboard_s.png" id="11_iuwdl"]
[ext_resource type="Texture2D" uid="uid://di1kffji4rpub" path="res://assets/image/keyboard/keyboard_q.png" id="12_h1qug"]
[ext_resource type="Texture2D" uid="uid://do21pybjwyq8q" path="res://assets/image/keyboard/keyboard_arrow_left.png" id="12_wxrot"]
[ext_resource type="Texture2D" uid="uid://bcmqe03bg36o5" path="res://assets/image/keyboard/keyboard_d.png" id="13_1dhq1"]
[ext_resource type="Texture2D" uid="uid://0slf2wvbyrq0" path="res://assets/image/keyboard/keyboard_arrow_right.png" id="13_fgbj7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j7jkv"]
atlas = ExtResource("3_0syjs")
region = Rect2(1280, 512, 128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_saqtk"]
size = Vector2(766, 102)

[sub_resource type="Shader" id="Shader_gv04h"]
code = "shader_type canvas_item;

uniform int lightning_number = 5;
uniform vec2 amplitude = vec2(2.0,1.0);
uniform float offset = 0.45;
uniform float thickness = 0.02;
uniform float speed = 3.0;
uniform vec4 base_color : source_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float glow_thickness = 0.08;
uniform vec4 glow_color : source_color = vec4(0.2, 0, 0.8, 0.0);
uniform float alpha : hint_range(0, 1) = 1.0;

// plot function
float plot(vec2 st, float pct, float half_width){
  return  smoothstep( pct-half_width, pct, st.y) -
          smoothstep( pct, pct+half_width, st.y);
}

vec2 hash22(vec2 uv) {
    uv = vec2(dot(uv, vec2(127.1,311.7)),
              dot(uv, vec2(269.5,183.3)));
    return 2.0 * fract(sin(uv) * 43758.5453123) - 1.0;
}

float noise(vec2 uv) {
    vec2 iuv = floor(uv);
    vec2 fuv = fract(uv);
    vec2 blur = smoothstep(0.0, 1.0, fuv);
    return mix(mix(dot(hash22(iuv + vec2(0.0,0.0)), fuv - vec2(0.0,0.0)),
                   dot(hash22(iuv + vec2(1.0,0.0)), fuv - vec2(1.0,0.0)), blur.x),
               mix(dot(hash22(iuv + vec2(0.0,1.0)), fuv - vec2(0.0,1.0)),
                   dot(hash22(iuv + vec2(1.0,1.0)), fuv - vec2(1.0,1.0)), blur.x), blur.y) + 0.5;
}

float fbm(vec2 n) {
    float total = 0.0, amp = 1.0;
    for (int i = 0; i < 7; i++) {
        total += noise(n) * amp;
        n += n;
        amp *= 0.5;
    }
    return total;
}


void fragment(){
	vec2 uv = UV;
	vec4 color = vec4(0.0, 0.0, 0.0, 0.0);

	vec2 t ;
	float y ;
	float pct ;
	float buffer;
	// add more lightning
	for ( int i = 0; i < lightning_number; i++){
		t = uv * amplitude + vec2(float(i), -float(i)) - TIME*speed;
		y = fbm(t)*offset;
		pct = plot(uv, y, thickness);
		buffer = plot(uv, y, glow_thickness);
		color += pct*base_color;
		color += buffer*glow_color;
	}

	color.a *= alpha;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wgn4e"]
shader = SubResource("Shader_gv04h")
shader_parameter/lightning_number = 3
shader_parameter/amplitude = Vector2(1, 1)
shader_parameter/offset = 0.45
shader_parameter/thickness = 0.5
shader_parameter/speed = 1.0
shader_parameter/base_color = Color(0.325955, 0.609426, 1, 1)
shader_parameter/glow_thickness = 0.02
shader_parameter/glow_color = Color(0.2, 0, 0.8, 0)
shader_parameter/alpha = 1.0

[sub_resource type="Gradient" id="Gradient_o1l3i"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bp0yd"]
gradient = SubResource("Gradient_o1l3i")

[node name="Level01" type="Node2D"]
script = ExtResource("1_suqfq")

[node name="Floor" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAP//AAAAAAYAAQAAAAAAAAAAAAYAAQAAAAEAAAAAAAYAAQAAAAIAAAAAAAYAAQAAAAMAAAAAAAYAAQAAAAQAAAAAAAYAAQAAAAUAAAAAAAYAAQAAAAYAAAAAAAYAAQAAAAcAAAAAAAYAAQAAAAgAAAAAAAYAAQABAP//AAAAAAYAAQABAAAAAAAAAAYAAQABAAEAAAAAAAYAAQABAAIAAAAAAAYAAQABAAMAAAAAAAYAAQABAAQAAAAAAAYAAQABAAUAAAAAAAYAAQABAAYAAAAAAAYAAQABAAcAAAAAAAYAAQABAAgAAAAAAAYAAQACAP//AAAAAAYAAQACAAAAAAAAAAYAAQACAAEAAAAAAAYAAQACAAIAAAAAAAYAAQACAAMAAAAAAAYAAQACAAQAAAAAAAYAAQACAAUAAAAAAAYAAQACAAYAAAAAAAYAAQACAAcAAAAAAAYAAQACAAgAAAAAAAYAAQADAP//AAAAAAYAAQADAAAAAAAAAAYAAQADAAEAAAAAAAYAAQADAAIAAAAAAAYAAQADAAMAAAAAAAYAAQADAAQAAAAAAAYAAQADAAUAAAAAAAYAAQADAAYAAAAAAAYAAQADAAcAAAAAAAYAAQADAAgAAAAAAAYAAQAEAP//AAAAAAYAAQAEAAAAAAAAAAYAAQAEAAEAAAAAAAYAAQAEAAIAAAAAAAYAAQAEAAMAAAAAAAYAAQAEAAQAAAAAAAYAAQAEAAUAAAAAAAYAAQAEAAYAAAAAAAYAAQAEAAcAAAAAAAYAAQAEAAgAAAAAAAYAAQAFAP//AAAAAAYAAQAFAAAAAAAAAAYAAQAFAAEAAAAAAAYAAQAFAAIAAAAAAAYAAQAFAAMAAAAAAAYAAQAFAAQAAAAAAAYAAQAFAAUAAAAAAAYAAQAFAAYAAAAAAAYAAQAFAAcAAAAAAAYAAQAFAAgAAAAAAAYAAQAGAP//AAAAAAYAAQAGAAAAAAAAAAYAAQAGAAEAAAAAAAYAAQAGAAIAAAAAAAYAAQAGAAMAAAAAAAYAAQAGAAQAAAAAAAYAAQAGAAUAAAAAAAYAAQAGAAYAAAAAAAYAAQAGAAcAAAAAAAYAAQAGAAgAAAAAAAYAAQAHAP//AAAAAAYAAQAHAAAAAAAAAAYAAQAHAAEAAAAAAAYAAQAHAAIAAAAAAAYAAQAHAAMAAAAAAAYAAQAHAAQAAAAAAAYAAQAHAAUAAAAAAAYAAQAHAAYAAAAAAAYAAQAHAAcAAAAAAAYAAQAHAAgAAAAAAAYAAQAIAP//AAAAAAYAAQAIAAAAAAAAAAYAAQAIAAEAAAAAAAYAAQAIAAIAAAAAAAYAAQAIAAMAAAAAAAYAAQAIAAQAAAAAAAYAAQAIAAUAAAAAAAYAAQAIAAYAAAAAAAYAAQAIAAcAAAAAAAYAAQAIAAgAAAAAAAYAAQAJAP//AAAAAAYAAQAJAAAAAAAAAAYAAQAJAAEAAAAAAAYAAQAJAAIAAAAAAAYAAQAJAAMAAAAAAAYAAQAJAAQAAAAAAAYAAQAJAAUAAAAAAAYAAQAJAAYAAAAAAAYAAQAJAAcAAAAAAAYAAQAJAAgAAAAAAAYAAQAKAP//AAAAAAYAAQAKAAAAAAAAAAYAAQAKAAEAAAAAAAYAAQAKAAIAAAAAAAYAAQAKAAMAAAAAAAYAAQAKAAQAAAAAAAYAAQAKAAUAAAAAAAYAAQAKAAYAAAAAAAYAAQAKAAcAAAAAAAYAAQAKAAgAAAAAAAYAAQALAP//AAAAAAYAAQALAAAAAAAAAAYAAQALAAEAAAAAAAYAAQALAAIAAAAAAAYAAQALAAMAAAAAAAYAAQALAAQAAAAAAAYAAQALAAUAAAAAAAYAAQALAAYAAAAAAAYAAQALAAcAAAAAAAYAAQALAAgAAAAAAAYAAQAMAP//AAAAAAYAAQAMAAAAAAAAAAYAAQAMAAEAAAAAAAYAAQAMAAIAAAAAAAYAAQAMAAMAAAAAAAYAAQAMAAQAAAAAAAYAAQAMAAUAAAAAAAYAAQAMAAYAAAAAAAYAAQAMAAcAAAAAAAYAAQAMAAgAAAAAAAYAAQANAP//AAAAAAYAAQANAAAAAAAAAAYAAQANAAEAAAAAAAYAAQANAAIAAAAAAAYAAQANAAMAAAAAAAYAAQANAAQAAAAAAAYAAQANAAUAAAAAAAYAAQANAAYAAAAAAAYAAQANAAcAAAAAAAYAAQANAAgAAAAAAAYAAQAOAP//AAAAAAYAAQAOAAAAAAAAAAYAAQAOAAEAAAAAAAYAAQAOAAIAAAAAAAYAAQAOAAMAAAAAAAYAAQAOAAQAAAAAAAYAAQAOAAUAAAAAAAYAAQAOAAYAAAAAAAYAAQAOAAcAAAAAAAYAAQAOAAgAAAAAAAYAAQA=")
tile_set = ExtResource("2_puh76")

[node name="Walls" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAgAAAAKAAAAATACAAgAAAAKAAAAATADAAgAAAAKAAAAATAEAAgAAAAKAAAAATAFAAgAAAAKAAAAATAGAAgAAAAKAAAAATAHAAgAAAAKAAAAATAIAAgAAAAKAAAAATAJAAgAAAAKAAAAATAKAAgAAAAKAAAAATALAAgAAAAKAAAAATAMAAgAAAAKAAAAATANAAgAAAAKAAAAATAAAAcAAAAKAAAAAWAAAAYAAAAKAAAAAWAAAAUAAAAKAAAAAWAAAAQAAAAKAAAAAWAAAAMAAAAKAAAAAWAAAAIAAAAKAAAAAWAAAAEAAAAKAAAAAWAAAAAAAAAKAAAAAWAOAAcAAAAKAAAAAVAOAAYAAAAKAAAAAVAOAAUAAAAKAAAAAVAOAAQAAAAKAAAAAVAOAAMAAAAKAAAAAVAOAAIAAAAKAAAAAVAOAAEAAAAKAAAAAVAOAAAAAAAKAAAAAVAOAAgAAAAJAAAAATAAAAgAAAAJAAAAAWAAAP//AAAJAAAAAQAOAP//AAAJAAAAAVABAP//AAAKAAAAAQACAP//AAAKAAAAAQADAP//AAAKAAAAAQAEAP//AAAKAAAAAQANAP//AAAKAAAAAQAMAP//AAAKAAAAAQALAP//AAAKAAAAAQA=")
tile_set = ExtResource("2_puh76")

[node name="EndPosition" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1024, -128)

[node name="InfiniteLoader" type="Node2D" parent="."]
script = ExtResource("2_0n3ly")

[node name="StopWall" type="StaticBody2D" parent="InfiniteLoader"]
unique_name_in_owner = true
visible = false
z_index = 2
position = Vector2(1051, 1327)
collision_layer = 4
collision_mask = 3

[node name="Sprite01" type="Sprite2D" parent="InfiniteLoader/StopWall"]
modulate = Color(0.666667, 0.517647, 0.462745, 1)
position = Vector2(-320, 16)
texture = SubResource("AtlasTexture_j7jkv")
metadata/_edit_lock_ = true

[node name="Sprite02" type="Sprite2D" parent="InfiniteLoader/StopWall"]
modulate = Color(0.666667, 0.517647, 0.462745, 1)
position = Vector2(-192, 16)
texture = SubResource("AtlasTexture_j7jkv")
metadata/_edit_lock_ = true

[node name="Sprite03" type="Sprite2D" parent="InfiniteLoader/StopWall"]
modulate = Color(0.666667, 0.517647, 0.462745, 1)
position = Vector2(-64, 16)
texture = SubResource("AtlasTexture_j7jkv")
metadata/_edit_lock_ = true

[node name="Sprite04" type="Sprite2D" parent="InfiniteLoader/StopWall"]
modulate = Color(0.666667, 0.517647, 0.462745, 1)
position = Vector2(64, 16)
texture = SubResource("AtlasTexture_j7jkv")
metadata/_edit_lock_ = true

[node name="Sprite05" type="Sprite2D" parent="InfiniteLoader/StopWall"]
modulate = Color(0.666667, 0.517647, 0.462745, 1)
position = Vector2(192, 16)
texture = SubResource("AtlasTexture_j7jkv")
metadata/_edit_lock_ = true

[node name="Sprite06" type="Sprite2D" parent="InfiniteLoader/StopWall"]
modulate = Color(0.666667, 0.517647, 0.462745, 1)
position = Vector2(320, 16)
texture = SubResource("AtlasTexture_j7jkv")
metadata/_edit_lock_ = true

[node name="Collision" type="CollisionShape2D" parent="InfiniteLoader/StopWall"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("RectangleShape2D_saqtk")

[node name="Player1KeyboardHint" parent="." instance=ExtResource("9_880yl")]
position = Vector2(873, 996)
up = ExtResource("10_s016p")
down = ExtResource("11_iuwdl")
left = ExtResource("12_h1qug")
right = ExtResource("13_1dhq1")

[node name="Player2KeyboardHint" parent="." instance=ExtResource("9_880yl")]
position = Vector2(1174, 996)
up = ExtResource("10_savgc")
down = ExtResource("11_3nb7h")
left = ExtResource("12_wxrot")
right = ExtResource("13_fgbj7")

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("playerOne", "playerTwo")]
unique_name_in_owner = true
position = Vector2(1009.74, 800.179)
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("2_r2sxb")
playerOne = NodePath("../PlayerOne")
playerTwo = NodePath("../PlayerTwo")

[node name="Linky" type="Node2D" parent="." node_paths=PackedStringArray("playerOne", "playerTwo")]
z_index = 1
position = Vector2(1026, 860)
script = ExtResource("5_qumpj")
playerOne = NodePath("../PlayerOne")
playerTwo = NodePath("../PlayerTwo")

[node name="Beam" type="Sprite2D" parent="Linky"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_wgn4e")
scale = Vector2(4.57813, 0.3)
texture = SubResource("GradientTexture2D_bp0yd")
metadata/_edit_lock_ = true

[node name="PlayerOne" parent="." instance=ExtResource("2_2pjf8")]
unique_name_in_owner = true
z_index = 1
position = Vector2(873, 859)
collision_mask = 54

[node name="PlayerTwo" parent="." instance=ExtResource("3_isf1q")]
unique_name_in_owner = true
z_index = 1
position = Vector2(1174, 861.821)
collision_mask = 45

[node name="BlackCircle" parent="." instance=ExtResource("7_dbkpd")]
unique_name_in_owner = true
z_index = 50

[node name="YouFailed" parent="." instance=ExtResource("8_axi6d")]
unique_name_in_owner = true
visible = false
z_index = 50

[connection signal="link_broken" from="Linky" to="." method="_on_linky_broken"]
